# norchain-sdk

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .npmrc  API_TESTING_REPORT.md  BUILD_PROGRESS_FINAL.md  BUILD_STATUS.md  CLAUDE.md  COMPLETE_API_TEST_REPORT.md  COMPLETE_TESTING_ANALYSIS.md  CONTROLLER_TESTS_PROGRESS.md  CONTROLLER_TESTS_SUCCESS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_FINAL.md  ECOSYSTEM_BUILD_SUMMARY.md  INTEGRATION_TESTS_COMPLETE.md  QUICK_START.md  README.md  SERVICES_RUNNING.md  SERVICES_STATUS.md  TESTING_COMPLETE_STATUS.md  TESTING_EXPANSION_COMPLETE.md  TESTING_FIXES_COMPLETE.md  TESTING_PROGRESS_REPORT.md  TESTING_PROGRESS_SUMMARY.md  TESTING_STATUS_FINAL.md  docker-compose.dev-minimal.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
apps/wallet-desktop/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/wallet-desktop/desktop/src-tauri/src/: main.rs
apps/wallet-desktop/desktop/src-tauri/src/services/: supabase_config.rs  supabase_service.rs
docs/: API_100_PERCENT_PRODUCTION_READY.md  COMPLETE_FINAL_SUMMARY.md  DOCUMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  NEXT_STEPS.md  NEXT_STEPS_ROOT.md  README.md
scripts/: api-complete.sh  api-test.sh  api-verify.sh  build-and-start.sh  build-with-supabase.sh  check-docker-and-test.sh  check-docker.sh  configure-supabase.sh  docker-cleanup.sh  docker-monitor.sh  docker-optimize.sh  docker-setup.sh  docker-start-all.sh  docker-test-explorer.sh  docker-test.sh  docker-verify.sh  start-docker-services.sh  start-services.sh  (+3 more)
(+1611 files in other folders)
